public/assets/css/main.css
/* ... */
._notification_dropdown {
    background: var(--bg2);
    box-shadow: rgb(149 157 165 / 20%) 0px 8px 24px;
    padding: 16px;
    width: 400px;
    position: absolute;
    left: -110px;
    transition: .2s all ease;
    top: 32px;
    height: calc(100vh - 90px);
    overflow: auto;
    transform: translateY(20px);
    opacity:0;
    visibility: hidden;
    border-radius: 6px;
}
._notifications_content {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin:0 0 20px;
}
._notifications_content_title {
    font-size: 20px;
    font-weight: 600;
    color: var(--color6);
    line-height: 1.2;
}
._notifications_btn_link {
    border: 1px solid #f1f1f1;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.2;
    color: var(--color5);
    height: 36px;
    padding: 8px;
    border-radius: 6px;
    background: #1890ff26;
    margin: 0 10px 0 0;
}
._notifications_btn_link1 {
    border: 1px solid #f1f1f1;
    font-size: 16px;
    font-weight: 500;
    line-height: 1.2;
    color: var(--color6);
    height: 36px;
    padding: 8px;
    border-radius: 6px;
}
._notification_box_right {
    position: relative;
}
._notification_box_right_link {
    border: none;
    background: transparent;
    outline: none !important;
}
._notifications_drop_right {
    background:var(--bg2);
    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
    padding: 16px;
    position: absolute;
    right: 0;
    width: 220px;
    display: none;
}
._notification_item {
    margin: 0 0 10px;
}
._notification_link {
    color: var(--color7);
    font-size: 14px;
    font-weight: 400;
    line-height: 1.2;
    display: block;
}
._notify_img {
    max-width: 56px;
    height: 56px;
    border-radius: 50%;
    object-fit: cover;
}
._notification_box {
    display: flex;
    align-items: center;
    margin:0 0 16px;
    cursor:pointer;
    transition:.2s all ease;
    padding: 6px;
}
._notification_box:hover {
    background: #66666621;
}
._notification_image {
    flex: 0 0 56px;
    margin: 0 12px 0 0;
}
._nitification_time span {
    color:var(--color5);
    line-height: 1.2;
    font-weight: 600;
    font-size: .8125rem;
}
._notification_para {
    font-size: 14px;
    font-weight: 500;
    color: var(--color7);
    line-height: 1.6;
}
._notification_para span {
    color:var(--color6);
}
._notifications_all {
    margin: 20px 0 0;
}
._header_nav_link::before {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 0;
    background: #00ACFF;
}
._header_nav_link:hover::before {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 2px;
    background: #00ACFF;
    -webkit-transition: .2s all ease;
    -o-transition: .2s all ease;
    transition: .2s all ease;
}
._header_nav_link_active::before {
    content: "";
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 2px;
    background: #00ACFF;
    visibility: visible !important;
}
._header_nav_link svg path {
    -webkit-transition: .2s all ease;
    -o-transition: .2s all ease;
    transition: .2s all ease;
}
._header_nav_link:hover svg path {
    fill: var(--color5);
    fill-opacity: 1;
}
._header_nav_link:hover svg ._home {
    stroke:var(--color5);
    fill:none;
    stroke-opacity:1;
}
._header_nav_link:hover svg ._home1 {
    stroke:var(--color5);
    fill:none;
    stroke-opacity:1;
}
._header_nav_link_active svg path {
    fill-opacity: 1;
    fill: var(--color5);
}
._header_nav_link_active svg ._home_active {
    stroke: var(--color5);
    stroke-opacity: 1;
    fill:none !important;
}
._counting {
    position: absolute;
    background: var(--color5);
    border: 1px solid var(--bg2);
    border-radius: 9px;
    min-width: 17px;
    height: 17px;
    font-weight: normal;
    font-size: 11px;
    line-height: 1.4;
    text-align: center;
    color: var(--bg2);
    top: 16px;
    right: 10px;
    padding: 3px;
    display: flex;
    align-items: center;
    justify-content: center;
}
._header_nav_profile {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}

._header_nav_profile_image {
    margin: 0 8px 0 0;
    width: 24px;
}
._header_nav_dropdown {
    cursor:pointer;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}
._header_nav_para {
    font-weight: normal !important;
    font-size: 16px !important;
    line-height: 24px !important;
    color: var(--color6) !important;
}
._header_nav_dropdown_btn {
    border: 1px solid transparent;
    background: transparent;
    margin: -3px 0 0 8px;
}
/*------ Desktop Menu End --------*/

/*------ Mobile Menu --------*/
._header_mobile_menu{
    display: none;
    padding: 16px 16px 0;
    background: var(--bg2);
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 1030;
}
._header_mobile_menu_top_inner{
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
    margin:0 0 16px 0;
}
._nav_logo {
    max-width:169px;
}
._header_mobile_btn_link {
    border:none;
    background: transparent;
}
._header_mobile_menu_right {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}
._header_mobile_search {
    display: block;
    margin: 0 16px 0 0;
    cursor:pointer;
}
/*------ Mobile Menu End --------*/

/*------ Header Css End ---------------*/

/*------ Feed Css ------------*/
._feed_wrapper {
    padding: 100px 0px;
}
._feed_inner_area {
    background: var(--bg2);
    margin: 0 0 16px 0;
    -webkit-transition:.2s all ease;
    -o-transition:.2s all ease;
    transition:.2s all ease;
}
/* ... */

